# PhysAI-Zen

./: .gitignore  CITATION.cff  Gemfile  LICENSE  README.md  _config.yml  physics_primer.md  pyproject.toml  requirements.txt
.github/workflows/: jekyll.yml
_site/: 01_ising_gpt.md  02_decision_transformer.md  feed.xml  index.html  physics_primer.md
_site/2025/12/01/ising-gpt/: index.html
_site/2025/12/08/decision-transformer/: index.html
_site/2025/12/10/maxent-rl/: index.html
_site/assets/css/: style.css
docs/: 01_ising_gpt.md  02_decision_transformer.md  03_maxent_rl.md  index.html
docs/_layouts/: default.html  post.html
docs/_posts/: 2025-01-01-ising-gpt.md  2025-02-01-maxent-rl.md  2025-12-01-ising-gpt.md  2025-12-08-decision-transformer.md  2025-12-10-maxent-rl.md
docs/assets/css/: style.css
notebooks/: 02_Decision_Transformer.ipynb  03_MaxEnt_RL.ipynb  Nadaraya-Watson.ipynb  ising_model.ipynb
src/physai/: __init__.py  ising_data.py  ising_diagnostics.py  ising_transformer.py  training.py
